--- a/src/css/style.css
+++ b/src/css/style.css
@@ -936,6 +936,34 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[url\(\'src\/images\/go-api\.jpeg\'\)\] {
+  background-image: url('src/images/go-api.jpeg');
+}
+
+.bg-\[url\(\'\.\.\.\/src\/images\/go-api\.jpeg\'\)\] {
+  background-image: url('.../src/images/go-api.jpeg');
+}
+
+.bg-\[url\(\'\.\.\/src\/images\/go-api\.jpeg\'\)\] {
+  background-image: url('../src/images/go-api.jpeg');
+}
+
+.bg-\[url\(\'src\/images\/pemandangan\.jpg\'\)\] {
+  background-image: url('src/images/pemandangan.jpg');
+}
+
+.bg-\[url\(src\/images\/pemandangan\.jpg\)\] {
+  background-image: url(src/images/pemandangan.jpg);
+}
+
+.bg-\[url\(\.\.\/src\/images\/pemandangan\.jpg\)\] {
+  background-image: url(../src/images/pemandangan.jpg);
+}
+
+.bg-\[url\(\/src\/images\/pemandangan\.jpg\)\] {
+  background-image: url(/src/images/pemandangan.jpg);
+}
+
 .bg-\[url\(\'\/src\/images\/pemandangan\.jpg\'\)\] {
   background-image: url('/src/images/pemandangan.jpg');
 }
