--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,12 @@
+/*
+! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
+*/
+
+/*
+1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
+2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
+*/
+
 *,
 ::before,
 ::after {
@@ -16,6 +25,15 @@
   --tw-content: '';
 }
 
+/*
+1. Use a consistent sensible line-height in all browsers.
+2. Prevent adjustments of font size after orientation changes in iOS.
+3. Use a more readable tab size.
+4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
+6. Use the user's configured `sans` font-variation-settings by default.
+*/
+
 html {
   line-height: 1.5;
   /* 1 */
@@ -33,6 +51,11 @@ html {
   font-variation-settings: normal;
   /* 6 */
 }
+
+/*
+1. Remove the margin in all browsers.
+2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
+*/
 
 body {
   margin: 0;
@@ -936,38 +959,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'src\/images\/go-api\.jpeg\'\)\] {
-  background-image: url('src/images/go-api.jpeg');
-}
-
-.bg-\[url\(\'\.\.\.\/src\/images\/go-api\.jpeg\'\)\] {
-  background-image: url('.../src/images/go-api.jpeg');
-}
-
-.bg-\[url\(\'\.\.\/src\/images\/go-api\.jpeg\'\)\] {
-  background-image: url('../src/images/go-api.jpeg');
-}
-
-.bg-\[url\(\'src\/images\/pemandangan\.jpg\'\)\] {
-  background-image: url('src/images/pemandangan.jpg');
-}
-
-.bg-\[url\(src\/images\/pemandangan\.jpg\)\] {
-  background-image: url(src/images/pemandangan.jpg);
-}
-
-.bg-\[url\(\.\.\/src\/images\/pemandangan\.jpg\)\] {
-  background-image: url(../src/images/pemandangan.jpg);
-}
-
-.bg-\[url\(\/src\/images\/pemandangan\.jpg\)\] {
-  background-image: url(/src/images/pemandangan.jpg);
-}
-
-.bg-\[url\(\'\/src\/images\/pemandangan\.jpg\'\)\] {
-  background-image: url('/src/images/pemandangan.jpg');
-}
-
 .bg-cover {
   background-size: cover;
 }
@@ -1821,6 +1812,11 @@ video {
 .typed-cursor {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+:is(.dark .typed-cursor) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 390px) {
